--- a/src/ui/Emulin.glade
+++ b/src/ui/Emulin.glade
@@ -1630,15 +1630,15 @@
         </child>
         <child>
           <object class="GtkFixed">
-            <property name="width_request">405</property>
-            <property name="height_request">130</property>
+            <property name="width_request">410</property>
+            <property name="height_request">190</property>
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <child>
               <object class="GtkLabel">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Type</property>
+                <property name="label" translatable="yes">Cmd. Type</property>
               </object>
               <packing>
                 <property name="x">5</property>
@@ -1647,7 +1647,7 @@
             </child>
             <child>
               <object class="GtkComboBoxText" id="VentanaScheduleCommandType">
-                <property name="width_request">300</property>
+                <property name="width_request">305</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="active_id">UnconditionalFrame</property>
@@ -1672,7 +1672,7 @@
               <object class="GtkLabel">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Node</property>
+                <property name="label" translatable="yes">Cmd. Frame</property>
               </object>
               <packing>
                 <property name="x">5</property>
@@ -1680,8 +1680,8 @@
               </packing>
             </child>
             <child>
-              <object class="GtkComboBoxText" id="VentanaScheduleCommandNode">
-                <property name="width_request">300</property>
+              <object class="GtkComboBoxText" id="VentanaScheduleCommandFrameName">
+                <property name="width_request">305</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
               </object>
@@ -1694,7 +1694,7 @@
               <object class="GtkLabel">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Frame name</property>
+                <property name="label" translatable="yes">Cmd. Slave</property>
               </object>
               <packing>
                 <property name="x">5</property>
@@ -1702,8 +1702,8 @@
               </packing>
             </child>
             <child>
-              <object class="GtkComboBoxText" id="VentanaScheduleCommandFrameName">
-                <property name="width_request">300</property>
+              <object class="GtkComboBoxText" id="VentanaScheduleCommandSlave">
+                <property name="width_request">305</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
               </object>
@@ -1716,7 +1716,7 @@
               <object class="GtkLabel">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Data</property>
+                <property name="label" translatable="yes">Cmd. Timeout</property>
               </object>
               <packing>
                 <property name="x">5</property>
@@ -1724,8 +1724,30 @@
               </packing>
             </child>
             <child>
-              <object class="GtkEntry" id="VentanaScheduleCommandData">
-                <property name="width_request">300</property>
+              <object class="GtkEntry" id="VentanaScheduleCommandTimeout">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="width_chars">5</property>
+              </object>
+              <packing>
+                <property name="x">100</property>
+                <property name="y">95</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkLabel">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="label" translatable="yes">Raw data</property>
+              </object>
+              <packing>
+                <property name="x">5</property>
+                <property name="y">130</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkEntry" id="VentanaScheduleCommandDataRaw">
+                <property name="width_request">305</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="text" translatable="yes">0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00</property>
@@ -1733,7 +1755,199 @@
               </object>
               <packing>
                 <property name="x">100</property>
-                <property name="y">95</property>
+                <property name="y">125</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkLabel">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="label" translatable="yes">Frame</property>
+              </object>
+              <packing>
+                <property name="x">5</property>
+                <property name="y">160</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkComboBoxText" id="VentanaScheduleCommandDataFrame">
+                <property name="width_request">305</property>
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+              </object>
+              <packing>
+                <property name="x">100</property>
+                <property name="y">155</property>
+              </packing>
+            </child>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">1</property>
+          </packing>
+        </child>
+      </object>
+    </child>
+  </object>
+  <object class="GtkDialog" id="VentanaScheduleTable">
+    <property name="can_focus">False</property>
+    <property name="title" translatable="yes">Schedule table</property>
+    <property name="resizable">False</property>
+    <property name="type_hint">dialog</property>
+    <child>
+      <placeholder/>
+    </child>
+    <child internal-child="vbox">
+      <object class="GtkBox">
+        <property name="can_focus">False</property>
+        <property name="orientation">vertical</property>
+        <property name="spacing">2</property>
+        <child internal-child="action_area">
+          <object class="GtkButtonBox">
+            <property name="can_focus">False</property>
+            <property name="layout_style">end</property>
+            <child>
+              <object class="GtkButton" id="VentanaScheduleTableCancel">
+                <property name="label" translatable="yes">Cancel</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+              </object>
+              <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkButton" id="VentanaScheduleTableAccept">
+                <property name="label" translatable="yes">Accept</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+              </object>
+              <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">False</property>
+            <property name="position">0</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkFixed">
+            <property name="width_request">600</property>
+            <property name="height_request">400</property>
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <child>
+              <object class="GtkScrolledWindow">
+                <property name="width_request">495</property>
+                <property name="height_request">360</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="shadow_type">in</property>
+                <child>
+                  <object class="GtkTreeView" id="VentanaScheduleTableList">
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <child internal-child="selection">
+                      <object class="GtkTreeSelection" id="VentanaScheduleTableSelection"/>
+                    </child>
+                  </object>
+                </child>
+              </object>
+              <packing>
+                <property name="x">5</property>
+                <property name="y">35</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkButton" id="VentanaScheduleTableMoveUp">
+                <property name="label" translatable="yes">Move up</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+              </object>
+              <packing>
+                <property name="x">505</property>
+                <property name="y">40</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkButton" id="VentanaScheduleTableMoveDown">
+                <property name="label" translatable="yes">Move down</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+              </object>
+              <packing>
+                <property name="x">505</property>
+                <property name="y">70</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkButton" id="VentanaScheduleTableNew">
+                <property name="label" translatable="yes">New</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+              </object>
+              <packing>
+                <property name="x">505</property>
+                <property name="y">120</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkButton" id="VentanaScheduleTableEdit">
+                <property name="label" translatable="yes">Edit</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+              </object>
+              <packing>
+                <property name="x">505</property>
+                <property name="y">150</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkButton" id="VentanaScheduleTableDelete">
+                <property name="label" translatable="yes">Delete</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+              </object>
+              <packing>
+                <property name="x">505</property>
+                <property name="y">180</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkLabel">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="label" translatable="yes">Name</property>
+              </object>
+              <packing>
+                <property name="x">5</property>
+                <property name="y">10</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkEntry" id="VentanaScheduleTableName">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="width_chars">40</property>
+              </object>
+              <packing>
+                <property name="x">100</property>
+                <property name="y">5</property>
               </packing>
             </child>
           </object>
