--- a/src/ui/Emulin.glade
+++ b/src/ui/Emulin.glade
@@ -547,6 +547,7 @@
                     <property name="can_focus">True</property>
                     <property name="editable">False</property>
                     <property name="accepts_tab">False</property>
+                    <property name="monospace">True</property>
                   </object>
                 </child>
               </object>
